fixed dark mode notification links

--- a/packages/styles/_sass/pm-styles/_pm-dark-theme.scss
+++ b/packages/styles/_sass/pm-styles/_pm-dark-theme.scss
@@ -5,7 +5,7 @@
 @import "./pm-buttons-mixins";
 
 // forms/buttons
-.pm-button,
+.pm-button:not(.pm-button--primary):not(.pm-button--link),
 .pm-button--info  {
   @include pm-button-dark;
 }
